syntax = "proto3";

package pinger;

service PingerService {
  rpc Ping(PingRequest) returns (PingResponse) {}
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}